BUG#15961: SUBPARTITION defined in non-subpartitioned table no error Made sure that no subpartition stuff in non-subpartitioned table