sql/sql_partition.cc
@@ -692,6 +692,13 @@ bool check_partition_info(partition_info *part_info,handlerton **eng_type,
   char *same_name;
   DBUG_ENTER("check_partition_info");
 
+  if (unlikely(!part_info->is_sub_partitioned() &&
+               !(part_info->use_default_subpartitions &&
+                 part_info->use_default_no_subpartitions)))
+  {
+    my_error(ER_SUBPARTITION_ERROR, MYF(0));
+    goto end;
+  }
   if (unlikely(part_info->is_sub_partitioned() &&
               (!(part_info->part_type == RANGE_PARTITION ||
                  part_info->part_type == LIST_PARTITION))))
